# Object-Oriented-Programming

./: README.md
HW/HW 1/Task 1/: Alignment.h  Console.cpp  Console.h  Const.h  New.cpp  Row.cpp  Row.h  Table.cpp  Table.h  Value.cpp  Value.h  table.md
HW/HW 1/Task 2/: Const.h  Date.cpp  Date.h  File.cpp  (+14 more)
Libraries/Algorithm/: Algorithm.hpp
Libraries/Pair/: Pair.hpp
Libraries/Smart Pointer/: SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp
Libraries/String/: Const.h  Helper.cpp  Helper.h  MyString.cpp  MyString.h  New.cpp
Libraries/Vector/: Const.h  New.cpp  Vector.hpp
Practicum/03.05/: Battery.cpp  Battery.h  Car.cpp  Car.h  CarPart.cpp  CarPart.h  Engine.cpp  Engine.h  Exception.h  FuelTank.cpp  FuelTank.h  Tire.cpp  Tire.h
Practicum/10.05/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
Practicum/17.05/: ControlTypes.cpp  ControlTypes.h  Controll.cpp  Controll.h  FormContainer.h
Practicum/19.04/: Const.h  Helper.cpp  Helper.h  Message.h  New.cpp  User.cpp  User.h  sys.cpp  sys.h
Practicum/26.04/: Foodpanda.cpp  Foodpanda.h  Restaurant.cpp  Restaurant.h
Practicum/29.3/: Const.h  Game.cpp  Game.h  GamePlatform.cpp  GamePlatform.h  New.cpp
Projects/Chess/: Board.h  Const.h  Main.cpp
Projects/SuperHero/: CMakeLists.txt  New.cpp
Projects/SuperHero/Engine/Helper/Iterator/BiDirectional/: BiDirectIter.hpp
Projects/SuperHero/Engine/Helper/Iterator/RandomAccess/: RABaseIter.hpp  RAReverseIter.hpp
Projects/SuperHero/Engine/Helper/String/: Helper.cpp  MyString.h
Projects/SuperHero/Engine/Helper/Vector/: Vector.hpp
Projects/SuperHero/Engine/Interface/AdminIF/: AdminIF.cpp  AdminIF.h
Projects/SuperHero/Engine/Interface/BaseIF/: BaseIF.h
Projects/SuperHero/Engine/Interface/CombinedIF/: CombinedIF.cpp  CombinedIF.h
Projects/SuperHero/Engine/Interface/PlayerIF/: PlayerIF.cpp  PlayerIF.h
Projects/SuperHero/Engine/System/: Const.h  System.cpp  System.h
Projects/SuperHero/Game Element/SuperHero/: SuperHero.cpp  SuperHero.h
Projects/SuperHero/Game Element/Users/Admin/: Admin.cpp  Admin.h
Projects/SuperHero/Game Element/Users/Base/: User.cpp  User.h
Projects/SuperHero/Game Element/Users/Player/: Player.cpp  Player.h
Side Projects/N-bit Numbers/: Nbit.cpp  Nbit.h  New.cpp
(+61 files in other folders)
